--- a/.github/workflows/testPipeline.yml
+++ b/.github/workflows/testPipeline.yml
@@ -124,3 +124,8 @@ jobs:
       - name: 🧪 Run Maven Automation Tests
         working-directory: DigicertTerraformTests
         run: mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=testng.xml"
+
+      - name: 🧪 Re-Run failed Tests
+        working-directory: DigicertTerraformTests
+        run: mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=failure.xml"
+        if: failure() 
