--- a/.github/workflows/testPipeline.yml
+++ b/.github/workflows/testPipeline.yml
@@ -48,7 +48,7 @@ jobs:
           repository: digicert/DigicertTerraformTests
           path: DigicertTerraformTests
           token: ${{ secrets.QA_TOKEN }}
-          ref: fixesPipeline
+          ref: master
 
       - name: 📤 Copy Provider Binary to Automation Repo Root
         run: cp terraform-provider-digicert DigicertTerraformTests/
@@ -116,7 +116,7 @@ jobs:
           repository: digicert/DigicertTerraformTests
           path: DigicertTerraformTests
           token: ${{ secrets.QA_TOKEN }}
-          ref: fixesPipeline
+          ref: master
 
       - name: 📤 Copy Provider Binary to Automation Repo Root
         shell: powershell
