--- a/.github/workflows/testPipeline.yml
+++ b/.github/workflows/testPipeline.yml
@@ -10,76 +10,76 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-test:
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    env:
-      GOPATH: ${{ github.workspace }}/go
-    steps:
-      - name: 🔄 Checkout Terraform Provider Repo
-        uses: actions/checkout@v3
+  # ubuntu-test:
+  #   runs-on: ubuntu-latest
+  #   continue-on-error: true
+  #   env:
+  #     GOPATH: ${{ github.workspace }}/go
+  #   steps:
+  #     - name: 🔄 Checkout Terraform Provider Repo
+  #       uses: actions/checkout@v3
 
-      - name: ⚙️ Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.21'
+  #     - name: ⚙️ Set up Go
+  #       uses: actions/setup-go@v4
+  #       with:
+  #         go-version: '1.21'
 
-      - name: 🧹 Clean Go Module Cache (Optional but helpful)
-        run: |
-          go clean -modcache
+  #     - name: 🧹 Clean Go Module Cache (Optional but helpful)
+  #       run: |
+  #         go clean -modcache
 
-      - name: 📦 Build Terraform Provider
-        run: |
-          go mod tidy
-          go build -o terraform-provider-digicert
+  #     - name: 📦 Build Terraform Provider
+  #       run: |
+  #         go mod tidy
+  #         go build -o terraform-provider-digicert
 
-      - name: 📁 Move Plugin to Terraform Plugin Directory
-        run: |
-          PLUGIN_DIR="${GOPATH}/bin/digicert.com/terraform/digicert/0.1.0/linux_amd64"
-          mkdir -p "$PLUGIN_DIR"
-          cp terraform-provider-digicert "$PLUGIN_DIR/"
+  #     - name: 📁 Move Plugin to Terraform Plugin Directory
+  #       run: |
+  #         PLUGIN_DIR="${GOPATH}/bin/digicert.com/terraform/digicert/0.1.0/linux_amd64"
+  #         mkdir -p "$PLUGIN_DIR"
+  #         cp terraform-provider-digicert "$PLUGIN_DIR/"
 
-      - name: 🌍 Install Terraform (Linux)
-        run: |
-          wget https://releases.hashicorp.com/terraform/1.11.4/terraform_1.11.4_linux_amd64.zip
-          unzip terraform_1.11.4_linux_amd64.zip
-          sudo mv terraform /usr/local/bin/
-          terraform version
+  #     - name: 🌍 Install Terraform (Linux)
+  #       run: |
+  #         wget https://releases.hashicorp.com/terraform/1.11.4/terraform_1.11.4_linux_amd64.zip
+  #         unzip terraform_1.11.4_linux_amd64.zip
+  #         sudo mv terraform /usr/local/bin/
+  #         terraform version
 
-      - name: 🔄 Checkout Automation Repo
-        uses: actions/checkout@v3
-        with:
-          repository: digicert/DigicertTerraformTests
-          path: DigicertTerraformTests
-          token: ${{ secrets.QA_TOKEN }}
-          ref: fixesPipeline
+  #     - name: 🔄 Checkout Automation Repo
+  #       uses: actions/checkout@v3
+  #       with:
+  #         repository: digicert/DigicertTerraformTests
+  #         path: DigicertTerraformTests
+  #         token: ${{ secrets.QA_TOKEN }}
+  #         ref: fixesPipeline
 
-      - name: 📤 Copy Provider Binary to Automation Repo Root
-        run: cp terraform-provider-digicert DigicertTerraformTests/
+  #     - name: 📤 Copy Provider Binary to Automation Repo Root
+  #       run: cp terraform-provider-digicert DigicertTerraformTests/
 
-      - name: ☕ Set up Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+  #     - name: ☕ Set up Java
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         distribution: 'temurin'
+  #         java-version: '17'
 
-      - name: 🧪 Run Maven Automation Tests
-        id: maven-test
-        working-directory: DigicertTerraformTests
-        run: |
-          set +e
-          mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=testng.xml"
-          echo "exit_code=$?" >> $GITHUB_OUTPUT
-          exit 0  # Prevent step from failing the job
+  #     - name: 🧪 Run Maven Automation Tests
+  #       id: maven-test
+  #       working-directory: DigicertTerraformTests
+  #       run: |
+  #         set +e
+  #         mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=testng.xml"
+  #         echo "exit_code=$?" >> $GITHUB_OUTPUT
+  #         exit 0  # Prevent step from failing the job
     
-      - name: 🧪 Re-Run failed Tests
-        working-directory: DigicertTerraformTests
-        if: steps.maven-test.outputs.exit_code != '0'
-        run: mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=failure.xml"
+  #     - name: 🧪 Re-Run failed Tests
+  #       working-directory: DigicertTerraformTests
+  #       if: steps.maven-test.outputs.exit_code != '0'
+  #       run: mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=failure.xml"
     
   windows-test:
-    needs: ubuntu-test
-    if: always()
+    # needs: ubuntu-test
+    # if: always()
     runs-on: windows-latest
     env:
       GOPATH: ${{ github.workspace }}/go
@@ -138,14 +138,20 @@ jobs:
       - name: 🧪 Run Maven Automation Tests
         id: maven-test
         working-directory: DigicertTerraformTests
+        shell: powershell
         run: |
-            set +e
-            mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=testng.xml"
-            echo "exit_code=$?" >> $GITHUB_OUTPUT
-            exit 0  # Prevent step from failing the job
+            try {
+              mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=testng.xml"
+              $exitCode = $LASTEXITCODE
+            } catch {
+              $exitCode = 1
+            }
+            echo "exit_code=$exitCode" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding utf8
+  
     
       - name: 🧪 Re-Run failed Tests
         working-directory: DigicertTerraformTests
         if: steps.maven-test.outputs.exit_code != '0'
         run: mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=failure.xml"
+    
     
