--- a/.github/workflows/testPipeline.yml
+++ b/.github/workflows/testPipeline.yml
@@ -143,8 +143,7 @@ jobs:
             mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=testng.xml"
             $exitCode = $LASTEXITCODE
             "exit_code=$exitCode" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
-        
-  
+            exit 0  # Always exit 0 to prevent job failure
     
       - name: 🧪 Re-Run failed Tests
         working-directory: DigicertTerraformTests
