--- a/.github/workflows/testPipeline.yml
+++ b/.github/workflows/testPipeline.yml
@@ -73,10 +73,20 @@ jobs:
           exit 0  # Prevent step from failing the job
     
       - name: 🧪 Re-Run failed Tests
+        id: rerun-tests
         working-directory: DigicertTerraformTests
         if: steps.maven-test.outputs.exit_code != '0'
+        run: |
+            set +e
+            mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=failure.xml"
+            echo "exit_code=$?" >> $GITHUB_OUTPUT
+            exit 0
+        
+      - name: 🧪 Final Retry for persistent failures
+        working-directory: DigicertTerraformTests
+        if: steps.rerun-tests.outputs.exit_code != '0'
         run: mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=failure.xml"
-    
+        
   windows-test:
     needs: ubuntu-test
     if: always()
@@ -146,8 +156,18 @@ jobs:
             exit 0  # Always exit 0 to prevent job failure
     
       - name: 🧪 Re-Run failed Tests
+        id: rerun-tests
         working-directory: DigicertTerraformTests
         if: steps.maven-test.outputs.exit_code != '0'
+        shell: powershell
+        run: |
+              mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=failure.xml"
+              $exitCode = $LASTEXITCODE
+              "exit_code=$exitCode" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+              exit 0
+          
+      - name: 🧪 Final Retry for persistent failures
+        working-directory: DigicertTerraformTests
+        if: steps.rerun-tests.outputs.exit_code != '0'
+        shell: powershell
         run: mvn clean test "-Dsurefire.forkCount=1" "-Dsurefire.reuseForks=false" "-DsuiteXmlFile=failure.xml"
-    
-    
