Added provider documentation for terraform registry documentation page

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,10 +14,9 @@ builds:
   goarch:
     - amd64
     - '386'
+    - arm64
   ignore:
     - goos: darwin
-      goarch: '386'
-    - goos: windows
       goarch: '386'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
