--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,6 +16,10 @@ builds:
     - '386'
     - arm64
   ignore:
+    - goos: windows
+      goarch: 'arm64'
+    - goos: linux
+      goarch: 'arm64'
     - goos: darwin
       goarch: '386'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
