--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,10 +14,13 @@ builds:
   goarch:
     - amd64
     - '386'
+    - arm64
   ignore:
-    - goos: darwin
-      goarch: '386'
     - goos: windows
+      goarch: 'arm64'
+    - goos: linux
+      goarch: 'arm64'
+    - goos: darwin
       goarch: '386'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
