--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,8 +62,8 @@ jobs:
 
             echo '⬇ Installing Maven 3.9.6...'
             curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz &&
-            tar -xzf apache-maven-3.9.6-bin.tar.gz &&
-            export MAVEN_HOME=/workspace/apache-maven-3.9.6-bin/apache-maven-3.9.6 &&
+            tar -xzf apache-maven-3.9.6-bin.tar.gz -C /workspace &&
+            export MAVEN_HOME=/workspace/apache-maven-3.9.6 &&
             export PATH="$MAVEN_HOME/bin:$PATH" &&
             mvn -version
 
